--- a/css/ahorcado.css
+++ b/css/ahorcado.css
@@ -69,11 +69,45 @@
         border-style: solid;
         border-color: aliceblue;
     }
+    #imagenPerdedor{
+        display: none;
+        background-image: url(../img/perdedor.png);
+        width:96%;
+        align-items: center;
+        height: 500px;
+        width: 300px;
+        transition-timing-function: linear;
+        transition-delay: 0.1s; 
+        border-radius: 5px;
+        border-width: 5px 5px 5px;
+        border-style: solid;
+        border-color: aliceblue;
+        
+    }
+
+    #imagenGanador{
+        display: none;
+        background-image: url(../img/ganador.png);
+        width:96%;
+        align-items: center;
+        height: 500px;
+        width: 300px;
+        transition-timing-function: linear;
+        transition-delay: 0.1s; 
+        border-radius: 5px;
+        border-width: 5px 5px 5px;
+        border-style: solid;
+        border-color: aliceblue;
+    }
 
    
 
      #palabra_adivinar{
+
         position: absolute;
+        font-size: 2em;
+        color: rgb(5, 0, 0);
+        text-shadow: 10px 10px 20px rgb(187, 17, 17);
         text-align: center;
         top: 15%;
         height: 3em;
@@ -96,4 +130,17 @@
         display: flex;
         flex-wrap: wrap;
         gap: 7px;
+      }
+
+      #teclado button{
+        border: 3px outset #96734a;
+        color: #FFF;
+        font-size: 26px;
+        height: 40px;
+        width: 40px;
+        background-color: rgba(0, 0, 0, 0.4);
+        margin: 2px;
+        text-align: center;
+        text-indent: -1px;
+        border-radius: 8px;
       }
