--- a/css/ahorcado.css
+++ b/css/ahorcado.css
@@ -12,7 +12,7 @@
   }
 
     body {
-      /*  background-image: url(../img/Background.jpg);*/
+        background-image: url(../img/Background.jpg);
         background-size: cover;
         margin: 0;
         min-height: 100vh;
@@ -74,7 +74,7 @@
         background-image: url(../img/perdedor.png);
         width:96%;
         align-items: center;
-        height: 500px;
+        height: 550px;
         width: 300px;
         transition-timing-function: linear;
         transition-delay: 0.1s; 
@@ -82,6 +82,7 @@
         border-width: 5px 5px 5px;
         border-style: solid;
         border-color: aliceblue;
+        margin-bottom: 10px;
         
     }
 
@@ -90,7 +91,7 @@
         background-image: url(../img/ganador.png);
         width:96%;
         align-items: center;
-        height: 500px;
+        height: 550px;
         width: 300px;
         transition-timing-function: linear;
         transition-delay: 0.1s; 
@@ -125,6 +126,26 @@
         vertical-align:bottom;
         margin-right: 3px;
       }
+      #botonJugar{
+        width: 80%;
+        height: 10%;
+        margin-top: 5px;
+        text-align: center;
+        align-items: center;
+      }
+      #jugar{
+        display: inline-block;
+        border: 3px;
+        color: #FFF;
+        font-size: 20px;
+        height: 80%;
+        width: 100%;
+        background-color: rgba(192, 190, 190, 0.5);
+        margin: 2px;
+        text-align: center;
+        text-indent: -1px;
+        border-radius: 8px;
+      }
 
       #teclado{
         display: flex;
@@ -138,9 +159,16 @@
         font-size: 26px;
         height: 40px;
         width: 40px;
-        background-color: rgba(0, 0, 0, 0.4);
+        background-color: rgba(0, 0, 0, 0.5);
         margin: 2px;
         text-align: center;
         text-indent: -1px;
         border-radius: 8px;
+      }
+
+      footer{
+        width: 100%;
+        height: 10%;
+        background-color: rgba(0, 0, 0, 0.5);
+        text-align: center;
       }
