--- a/css/ahorcado.css
+++ b/css/ahorcado.css
@@ -76,7 +76,7 @@
         background-image: url(../img/perdedor.png);
         width:96%;
         align-items: center;
-        height: 550px;
+        height: 500px;
         width: 300px;
         transition-timing-function: linear;
         transition-delay: 0.1s; 
@@ -93,7 +93,7 @@
         background-image: url(../img/ganador.png);
         width:96%;
         align-items: center;
-        height: 550px;
+        height: 500px;
         width: 300px;
         transition-timing-function: linear;
         transition-delay: 0.1s; 
@@ -139,11 +139,11 @@
       #jugar{
         display: inline-block;
         border: 3px;
-        color: #FFF;
+        
         font-size: 20px;
         height: 80%;
         width: 100%;
-        background-color: rgba(192, 190, 190, 0.5);
+       
         margin: 2px;
         text-align: center;
         text-indent: -1px;
@@ -158,12 +158,12 @@
       }
 
       #teclado button{
-        border: 3px outset #96734a;
-        color: #FFF;
+        border: 3px outset #ffffff;
+        /*color: #FFF;*/
         font-size: 18px;
         height: 30px;
         width: 30px;
-        background-color: rgba(0, 0, 0, 0.5);
+        /*background-color: rgba(0, 0, 0, 0.5);*/
         margin: 2px;
         text-align: center;
         text-indent: -1px;
