--- a/css/ahorcado.css
+++ b/css/ahorcado.css
@@ -171,6 +171,8 @@
       }
 
       footer{
+        position: absolute;
+        top: 100%;
         width: 100%;
         height: 10%;
         background-color: rgba(0, 0, 0, 0.5);
