--- a/css/ahorcado.css
+++ b/css/ahorcado.css
@@ -28,10 +28,9 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        
+        color: #fff;
         font-size: 30px;
         font-weight: bold;
-        color: #fff;
         text-shadow: 0px 0px 10px #000;
     }
 
@@ -143,7 +142,7 @@
         display: inline-block;
         border-width:  1px;
         font-size: 40px;
-        color: #fff;
+        color: rgba(255, 255, 255,0.7);
         height: 80%;
         width: 100%;
         margin: 2px;
