--- a/css/ahorcado.css
+++ b/css/ahorcado.css
@@ -151,6 +151,7 @@
         width: 100%;
         margin: 2px;
         margin-top: 20px;
+        margin-bottom: 50px;
         padding: 10px;
         text-align: center;
         text-indent: -1px;
@@ -182,10 +183,12 @@
       }
 
       footer{
-        position: absolute;
+        
         top: 100%;
         width: 100%;
         height: 10%;
-        background-color: rgba(0, 0, 0, 0.5);
+        background-color: rgba(0, 0, 0, 0.9);
+        color: rgb(51, 145, 199);
+
         text-align: center;
       }
