--- a/css/ahorcado.css
+++ b/css/ahorcado.css
@@ -24,12 +24,12 @@
     }
 
     header {
-        height: 55px;
+        height: 45px;
         display: flex;
         justify-content: center;
         align-items: center;
         color: #fff;
-        font-size: 30px;
+        font-size: 28px;
         font-weight: bold;
         text-shadow: 0px 0px 10px #000;
     }
@@ -37,7 +37,7 @@
     main {
         width: 80%;
         margin: auto;
-        padding: 10px;
+        padding: 5px;
         gap: 30px;
         display: flex;
         flex-direction: column;
@@ -114,7 +114,7 @@
         color: rgb(82, 7, 7);
         text-shadow: 10px 10px 20px rgb(187, 17, 17);
         text-align: center;
-        top: 15%;
+        top: 10%;
         height: 3em;
         margin-right: 3px;
         z-index: 100
@@ -162,7 +162,7 @@
         display: flex;
         flex-wrap: wrap;
         gap: 7px;
-        margin-top: 10px;
+        margin-top: 5px;
         align-items: center;
         margin: auto;
         justify-content: center;
@@ -189,6 +189,14 @@
         height: 10%;
         background-color: rgba(0, 0, 0, 0.9);
         color: rgb(51, 145, 199);
-
         text-align: center;
+      }
+
+      #contador{
+        position: absolute;
+        font-weight: bold;
+        left: 64%;
+        display: inline-block;
+        top: 71%;
+        color: rgb(164, 206, 229);
       }
