--- a/css/ahorcado.css
+++ b/css/ahorcado.css
@@ -23,8 +23,8 @@
         
     }
 
-    header {
-        height: 45px;
+   header {
+        height: 30px;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -32,7 +32,7 @@
         font-size: 28px;
         font-weight: bold;
         text-shadow: 0px 0px 10px #000;
-    }
+    }  
 
     main {
         width: 80%;
@@ -86,9 +86,6 @@
         margin-bottom: 10px;
     }
 
-    
-
-   
     #imagenGanador{
         display: none;
         background-image: url(../img/ganador.png);
@@ -191,7 +188,7 @@
         color: rgb(51, 145, 199);
         text-align: center;
       }
-
+/*
       #contador{
         position: absolute;
         font-weight: bold;
@@ -200,3 +197,18 @@
         top: 71%;
         color: rgb(164, 206, 229);
       }
+*/
+
+      #contador{
+        display:  inline-block;
+        position: absolute;
+        font-size: 2em;
+        font-weight: bold;
+        color: rgb(237, 242, 245);
+        text-shadow: 10px 10px 20px rgb(187, 17, 17);
+        text-align: center;
+        top: 18%;
+        height: 3em;
+        margin-right: 3px;
+        z-index: 100
+     }
