--- a/css/ahorcado.css
+++ b/css/ahorcado.css
@@ -190,17 +190,16 @@
       }
 
       #contador{
-        display:  inline-block;
+        display: inline-flex;
         position: absolute;
-        font-size: 2em;
+        font-size: 26px;
         font-weight: bold;
         color: rgb(237, 242, 245);
         text-shadow: 10px 10px 20px rgb(187, 17, 17);
         text-align: center;
-        top: 19%;
-        height: 2em;
-        margin-right: 3px;
-        z-index: 100;
-        -webkit-text-stroke: 2px black;
+        margin-top: 95%;
+        margin-left: 77%;
+        -webkit-text-stroke: 2px rgb(250, 246, 246);
   color: transparent; 
+  z-index: 10;
      }
