--- a/css/ahorcado.css
+++ b/css/ahorcado.css
@@ -11,13 +11,20 @@
     z-index: 1;
   }
 
+     @font-face {
+       font-family:"DoctorTerror";
+       src: url(../fonts/DoctorTerror.otf);
+
+       font-family:"Melted Monster";
+       src: url(../fonts/MeltedMonster.ttf);
+     }
+
     body {
         background-image: url(../img/Background.jpg);
         background-size: cover;
         margin: 0;
         min-height: 100vh;
         align-items: center;
-        
         -webkit-text-size-adjust: 100%;
         -webkit-font-smoothing: antialiased;
         
@@ -72,7 +79,7 @@
     }
     #imagenPerdedor{
         display: none;
-        background-image: url(../img/perdedor.png);
+        background-image: url(../img/perdedor_1.png);
         width:96%;
         align-items: center;
         height: 500px;
@@ -107,13 +114,14 @@
         display:  inline-block;
         position: absolute;
         font-size: 2em;
-        font-weight: bold;
+        /*font-weight: bold;*/
         color: rgb(82, 7, 7);
         text-shadow: 10px 10px 20px rgb(187, 17, 17);
         text-align: center;
         top: 10%;
         height: 3em;
         margin-right: 3px;
+        font-family: "Melted Monster";
         z-index: 100
         
      }
@@ -127,6 +135,7 @@
         display:  inline-block;
         vertical-align:bottom;
         margin-right: 3px;
+        
       }
 
     #botonJugar{
@@ -136,7 +145,7 @@
         margin-top: 5px;
         text-align: center;
         align-items: center;
-
+        
       }
     #jugar{
         background-image: url(../img/Background.jpg);
@@ -153,6 +162,8 @@
         text-align: center;
         text-indent: -1px;
         border-radius: 8px;
+        font-family: "Melted Monster";
+
       }
 
       #teclado{
@@ -200,6 +211,8 @@
         margin-top: 98%;
         margin-left: 77%;
         -webkit-text-stroke: 2px rgb(250, 246, 246);
-  color: transparent; 
-  z-index: 10;
+        color: transparent; 
+        z-index: 10;
      }
+
+
