--- a/css/ahorcado.css
+++ b/css/ahorcado.css
@@ -194,7 +194,7 @@
         border-radius: 8px;
         border-color: rgba(29, 26, 26, 0.8);
         background-color: rgba(250, 244, 244, 0.5);
-        font-family: "Melted Monster", "DoctorTerror","BloodLust", "Nightcore Demo";
+        font-family: "Melted Monster", "Nightcore Demo", "Helvetica Neue", Helvetica, Arial, "DoctorTerror","BloodLust" ;
         
       }
 
@@ -216,7 +216,7 @@
         color: rgb(237, 242, 245);
         text-shadow: 10px 10px 20px rgb(187, 17, 17);
         text-align: center;
-        margin-top: 99%;
+        margin-top: 100%;
         margin-left: 76%;
         -webkit-text-stroke: 2px rgb(250, 246, 246);
         color: transparent; 
