--- a/css/ahorcado.css
+++ b/css/ahorcado.css
@@ -194,7 +194,7 @@
         border-radius: 8px;
         border-color: rgba(29, 26, 26, 0.8);
         background-color: rgba(250, 244, 244, 0.5);
-        font-family: "Melted Monster", "Nightcore Demo", "Helvetica Neue", Helvetica, Arial, "DoctorTerror","BloodLust" ;
+        font-family: "Melted Monster", "BloodLust", "Nightcore Demo", "Helvetica Neue", Helvetica, Arial, "DoctorTerror" ;
         
       }
 
