--- a/css/ahorcado.css
+++ b/css/ahorcado.css
@@ -1,226 +1,226 @@
 :root {
-    --colorTextos: #8dc9e6;
-  }
-  
-  * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    z-index: 1;
-  }
+  --colorTextos: #8dc9e6;
+}
 
-     @font-face {
-       font-family:"DoctorTerror";
-       src: url(../fonts/DoctorTerror.otf);
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  z-index: 1;
+}
 
-       font-family:"Melted Monster";
-       src: url(../fonts/MeltedMonster.ttf);
+@font-face {
+  font-family: "DoctorTerror";
+  src: url(../fonts/DoctorTerror.otf);
 
-       font-family:"BloodLust";
-       src: url(../fonts/BloodLust.ttf);
+  font-family: "Melted Monster";
+  src: url(../fonts/MeltedMonster.ttf);
 
-       font-family:"Nightcore Demo";
-       src: url(../fonts/NightcoreDemo.ttf);
-     }
+  font-family: "BloodLust";
+  src: url(../fonts/BloodLust.ttf);
 
-    body {
-        background-image: url(../img/Background.jpg);
-        background-size: cover;
-        margin: 0;
-        min-height: 100vh;
-        align-items: center;
-        -webkit-text-size-adjust: 100%;
-        -webkit-font-smoothing: antialiased;
-        
-    }
+  font-family: "Nightcore Demo";
+  src: url(../fonts/NightcoreDemo.ttf);
+}
 
-   header {
-        height: 30px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        color: #fff;
-        font-size: 28px;
-        font-weight: bold;
-        text-shadow: 0px 0px 10px #000;
-    }  
+body {
+  background-image: url(../img/Background.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin: 0;
+  min-height: 100vh;
+  overflow-y:hidden;
+  align-items: center;
+  -webkit-text-size-adjust: 100%;
+  -webkit-font-smoothing: antialiased;
+}
 
-    main {
-        width: 80%;
-        margin: auto;
-        padding: 5px;
-        gap: 30px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
+header {
+  height: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+  font-size: 28px;
+  font-weight: bold;
+  text-shadow: 0px 0px 10px #000;
+}
 
-    .container {
-        width: 100%;
-        height: 100%;
-        display: flex;
-        flex-direction: column; 
-        justify-content: center;
-        align-items: center;
-        background-color: (255,255,255,0.1);
-        background-size: cover;
-        background-position: center;
-        background-repeat: no-repeat;
-    }
+main {
+  width: 80%;
+  margin: auto;
+  padding: 5px;
+  gap: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
-    #imagenAhorcado{
-        background-image: url(../img/Original_2.png);
-        width:96%;
-        align-items: center;
-        height: 500px;
-        width: 300px;
-        transition-timing-function: linear;
-        transition-delay: 0.1s; 
-        border-radius: 5px;
-        border-width: 5px 5px 5px;
-        border-style: solid;
-        border-color: aliceblue;
-    }
-    #imagenPerdedor{
-        display: none;
-        background-image: url(../img/perdedor_1.png);
-        width:96%;
-        align-items: center;
-        height: 500px;
-        width: 300px;
-        transition-timing-function: linear;
-        transition-delay: 0.1s; 
-        border-radius: 5px;
-        border-width: 5px 5px 5px;
-        border-style: solid;
-        border-color: aliceblue;
-        margin-bottom: 10px;
-    }
+.container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: (255, 255, 255, 0.1);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
 
-    #imagenGanador{
-        display: none;
-        background-image: url(../img/ganador.png);
-        width:96%;
-        align-items: center;
-        height: 500px;
-        width: 300px;
-        transition-timing-function: linear;
-        transition-delay: 0.1s; 
-        border-radius: 5px;
-        border-width: 5px 5px 5px;
-        border-style: solid;
-        border-color: aliceblue;
-    }
+#imagenAhorcado {
+  background-image: url(../img/Original_2.png);
+  width: 90%;
+  align-items: center;
+  height: 500px;
+  width: 300px;
+  transition-timing-function: linear;
+  transition-delay: 0.1s;
+  border-radius: 5px;
+  border-width: 5px 5px 5px;
+  border-style: solid;
+  border-color: aliceblue;
+}
 
-   
+#imagenPerdedor {
+  display: none;
+  background-image: url(../img/perdedor_1.png);
+  width: 96%;
+  align-items: center;
+  height: 500px;
+  width: 300px;
+  transition-timing-function: linear;
+  transition-delay: 0.1s;
+  border-radius: 5px;
+  border-width: 5px 5px 5px;
+  border-style: solid;
+  border-color: aliceblue;
+  margin-bottom: 10px;
+}
 
-     #palabra_adivinar{
-        display:  inline-block;
-        position: absolute;
-        font-size: 2em;
-        /*font-weight: bold;*/
-        color: rgb(82, 7, 7);
-        text-shadow: 10px 10px 20px rgb(187, 17, 17);
-        text-align: center;
-        top: 10%;
-        height: 3em;
-        margin-right: 3px;
-        font-family: "Melted Monster", "BloodLust", "Nightcore Demo", "DoctorTerror";
-        z-index: 100
-        
-     }
+#imagenGanador {
+  display: none;
+  background-image: url(../img/ganador.png);
+  width: 96%;
+  align-items: center;
+  height: 500px;
+  width: 300px;
+  transition-timing-function: linear;
+  transition-delay: 0.1s;
+  border-radius: 5px;
+  border-width: 5px 5px 5px;
+  border-style: solid;
+  border-color: aliceblue;
+}
 
-    #palabra_adivinar span {
-        font-size: 1.5em;
-        border-bottom: 4px solid rgba(255, 255, 255, 0.5);
-        width: 30px;
-        text-align: center;
-        color: rgb(255, 255, 255);
-        display:  inline-block;
-        vertical-align:bottom;
-        margin-right: 3px;
-        
-      }
+#palabra_adivinar {
+  display: inline-block;
+  position: absolute;
+  font-size: 2em;
+  /*font-weight: bold;*/
+  color: rgb(82, 7, 7);
+  text-shadow: 10px 10px 20px rgb(187, 17, 17);
+  text-align: center;
+  top: 10%;
+  height: 3em;
+  margin-right: 3px;
+  font-family: "Melted Monster", "BloodLust", "Nightcore Demo", "DoctorTerror";
+  z-index: 100;
+}
 
-    #botonJugar{
-        display: inline-block;
-        width: 80%;
-        height: 12%;
-        margin-top: 5px;
-        text-align: center;
-        align-items: center;
-        
-      }
-    #jugar{
-        background-image: url(../img/Background.jpg);
-        display: inline-block;
-        border-width:  1px;
-        font-size: 40px;
-        color: rgba(255, 255, 255,0.7);
-        height: 80%;
-        width: 100%;
-        margin: 2px;
-        margin-top: 20px;
-        margin-bottom: 50px;
-        padding: 10px;
-        text-align: center;
-        text-indent: -1px;
-        border-radius: 8px;
-        
-        font-family: "Nightcore Demo";
+#palabra_adivinar span {
+  font-size: 1.5em;
+  border-bottom: 4px solid rgba(255, 255, 255, 0.5);
+  width: 30px;
+  text-align: center;
+  color: rgb(255, 255, 255);
+  display: inline-block;
+  vertical-align: bottom;
+  margin-right: 3px;
+}
 
-      }
+#botonJugar {
+  display: inline-block;
+  width: 80%;
+/*  height: 5%; */
+  margin-top: 5px;
+  text-align: center;
+  align-items: center;
+}
 
-      #teclado{
-        display: flex;
-        flex-wrap: wrap;
-        gap: 1px;
-        margin-top: 2px;
-        align-items: center;
-        margin: auto;
-        justify-content: center;
-      }
+#jugar {
+  background-image: url(../img/Background.jpg);
+  display: inline-block;
+  border-width: 1px;
+  font-size: 40px;
+  color: rgba(255, 255, 255, 0.7);
+/*  height: 80%; */ 
+  width: 100%;
+  margin: 2px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+/*  padding: 10px; */
+  text-align: center;
+  text-indent: -1px;
+  border-radius: 8px;
+  font-family: "Nightcore Demo";
+}
 
-      #teclado button{
-        border: 3px outset #ffffff;
-        font-size: 18px;
-        height: 30px;
-        width: 30px;
-        margin: 2px;
-        text-align: center;
-        text-indent: -1px;
-        border-radius: 8px;
-        border-color: rgba(29, 26, 26, 0.8);
-        background-color: rgba(250, 244, 244, 0.5);
-        font-family: "Melted Monster", "BloodLust", "Helvetica Neue", Helvetica, Arial, "DoctorTerror" ;
-        
-      }
+#teclado {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1px;
+  margin-top: 2px;
+  align-items: center;
+  margin: auto;
+  justify-content: center;
+}
 
-      footer{
-        
-        top: 100%;
-        width: 100%;
-        height: 10%;
-        background-color: rgba(0, 0, 0, 0.9);
-        color: rgb(51, 145, 199);
-        text-align: center;
-      }
+#teclado button {
+  border: 3px outset #ffffff;
+  font-size: 18px;
+  height: 30px;
+  width: 30px;
+  margin: 2px;
+  text-align: center;
+  text-indent: -1px;
+  border-radius: 8px;
+  border-color: rgba(29, 26, 26, 0.8);
+  background-color: rgba(250, 244, 244, 0.5);
+  font-family: "Melted Monster", "BloodLust", "Helvetica Neue", Helvetica, Arial,
+    "DoctorTerror";
+}
 
-      #contador{
-        display: inline-flex;
-        position: absolute;
-        font-size: 26px;
-        font-weight: bold;
-        color: rgb(237, 242, 245);
-        text-shadow: 10px 10px 20px rgb(187, 17, 17);
-        text-align: center;
-        margin-top: 100%;
-        margin-left: 76%;
-        -webkit-text-stroke: 2px rgb(250, 246, 246);
-        color: transparent; 
-        z-index: 10;
-     }
+#contador {
+  display: inline-flex;
+  position: absolute;
+  font-size: 26px;
+  font-weight: bold;
+  color: rgb(237, 242, 245);
+  text-shadow: 10px 10px 20px rgb(187, 17, 17);
+  text-align: center;
+  margin-top: 100%;
+  margin-left: 76%;
+  -webkit-text-stroke: 2px rgb(250, 246, 246);
+  color: transparent;
+  z-index: 10;
+}
 
+footer {
+  top: 100%;
+  width: 100%;
+  height: 10%;
+  background-color: rgba(0, 0, 0, 0.9);
+  color: rgb(51, 145, 199);
+  text-align: center;
+}
 
+@media only screen and (min-width: 768px ) { /*Probado en ipad*/}
+@media only screen and (min-width: 1024px) { /*Probado en ipad orientation: landscape*/}
+@media only screen and (min-width: 1280px) { /*Probado en ipad orientation: landscape*/}
+@media only screen and (min-width: 1366px) { /*Probado en ipad orientation: landscape*/}
+@media only screen and (min-width: 1440px) { /*Probado en ipad orientation: landscape*/}
+@media only screen and (min-width: 1920px) { /*Probado en http://responsivetesttool.com/*/}
