--- a/css/ahorcado.css
+++ b/css/ahorcado.css
@@ -31,10 +31,10 @@ body {
   background-size: cover;
   margin: 0;
   min-height: 100vh;
-  overflow-y:hidden;
+ /* overflow-y:hidden;*/
   align-items: center;
-  -webkit-text-size-adjust: 100%;
-  -webkit-font-smoothing: antialiased;
+ /* -webkit-text-size-adjust: 100%;
+  -webkit-font-smoothing: antialiased;*/
 }
 
 header {
