--- a/css/ahorcado.css
+++ b/css/ahorcado.css
@@ -221,7 +221,99 @@ footer {
   text-align: center;
 }
 
-@media only screen and (min-width: 768px ) { /*Probado en ipad*/}
+@media only screen and (min-width: 760px )  /*Probado en ipad 768 x 1024 */
+
+{
+
+  body {
+  margin: 50px 5px 5px 50px;
+  }
+
+header {
+  height: 80px;
+}
+
+main {
+  
+}
+
+.container {
+ 
+}
+
+#imagenAhorcado {
+  margin-bottom: 50px;
+}
+
+#imagenPerdedor {
+  margin-bottom: 50px;
+}
+
+#imagenGanador {
+  margin-bottom: 50px;
+}
+
+#palabra_adivinar {
+  
+  top: 15%;
+  
+}
+
+#palabra_adivinar span {
+  
+}
+
+#botonJugar {
+  
+  width: 80%;
+  margin-top: 5px;
+  margin-bottom: 5px;
+
+}
+
+#jugar {
+  border-width: 2px;
+  font-size: 50px;
+  margin: 2px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
+#teclado {
+  gap: 5px;
+}
+
+#teclado button {
+  border: 4px outset #ffffff;
+  font-size: 32px;
+  height: 50px;
+  width: 50px;
+  margin: 3px;
+  text-indent: -1px;
+  border-radius: 10px;
+  
+}
+
+#contador {
+  font-size: 84px;
+  font-weight: bold;
+  margin-top: 44%;
+  margin-left: 63%;
+}
+
+footer {
+  margin-top: 20%;
+  top: 100%;
+  width: 100%;
+  height: 10%;
+}
+
+
+}
+
+
+
+
 @media only screen and (min-width: 1024px) { /*Probado en ipad orientation: landscape*/}
 @media only screen and (min-width: 1280px) { /*Probado en ipad orientation: landscape*/}
 @media only screen and (min-width: 1366px) { /*Probado en ipad orientation: landscape*/}
