--- a/css/ahorcado.css
+++ b/css/ahorcado.css
@@ -239,11 +239,23 @@ main {
   
 }
 
+section {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  padding: auto;
+  border: 2px solid rgb(211, 208, 208);
+  border-radius: 10px;
+  background-color: rgba(255, 255, 255, 0.1);
+}
+
 .container {
  
 }
 
 #imagenAhorcado {
+  margin-top: 30px;
+  margin-left: 30px;
+  margin-right: 30px;
   margin-bottom: 50px;
 }
 
@@ -269,7 +281,7 @@ main {
   
   width: 80%;
   margin-top: 5px;
-  margin-bottom: 5px;
+  margin-bottom: 30px;
 
 }
 
@@ -291,16 +303,17 @@ main {
   height: 50px;
   width: 50px;
   margin: 3px;
+  margin-bottom: 20px;
   text-indent: -1px;
   border-radius: 10px;
-  color: rgba(14, 0, 0, 0.7);
+  
   
 }
 
 #contador {
   font-size: 84px;
   font-weight: bold;
-  margin-top: 38%;
+  margin-top: 44%;
   margin-left: 66%;
 }
 
@@ -308,7 +321,8 @@ footer {
   margin-top: 20%;
   top: 100%;
   width: 100%;
-  height: 10%;
+  height: 20%;
+  font-size: 30px;
 }
 
 
