--- a/css/ahorcado.css
+++ b/css/ahorcado.css
@@ -223,30 +223,18 @@ footer {
 
 /******************************------------------******************************/
 
-@media only screen and (min-width: 760px )  /*Probado en ipad 768 x 1024 */
+@media only screen and ( min-width: 768px )  /*Probado en ipad 768 x 1024 */
 
 {
 
-  body {
-  margin: auto;
-  }
+body {margin: auto;}
 
-header {
-  height: 80px;
-}
-
-main {
-  
+header {height: 80px;
 }
 
 section {
-  margin-top: 10px;
-  margin-bottom: 10px;
-  padding: auto;
-  border: 2px solid rgb(211, 208, 208);
-  border-radius: 10px;
-  background-color: rgba(255, 255, 255, 0.1);  
-  transition-duration: 2s;
+  margin-top: 10px; margin-bottom: 10px; padding: auto; border: 2px solid rgb(211, 208, 208);
+  border-radius: 10px; background-color: rgba(255, 255, 255, 0.1);   transition-duration: 2s;
 }
 
 .container {
@@ -254,88 +242,137 @@ section {
 }
 
 #imagenAhorcado {
-  margin-top: 30px;
-  margin-left: 30px;
-  margin-right: 30px;
-  margin-bottom: 50px;
- 
+  margin-top: 30px; margin-left: 30px; margin-right: 30px; margin-bottom: 50px;
 }
 
 #imagenPerdedor {
-  margin-top: 30px;
-  margin-left: 30px;
-  margin-right: 30px;
-  margin-bottom: 50px;
-  
+  margin-top: 30px; margin-left: 30px; margin-right: 30px; margin-bottom: 50px;
 }
 
 #imagenGanador {
-  margin-top: 30px;
-  margin-left: 30px;
-  margin-right: 30px;
-  margin-bottom: 50px;
+  margin-top: 30px; margin-left: 30px; margin-right: 30px;  margin-bottom: 50px;
 }
 
-#palabra_adivinar {
-  
-  top: 15%;
-  
-}
+#palabra_adivinar { top: 15%;}
 
-#palabra_adivinar span {
-  
-}
 
-#botonJugar {
-  
-  width: 80%;
-  margin-top: 5px;
-  margin-bottom: 30px;
+#botonJugar { width: 80%; margin-top: 5px; margin-bottom: 30px;}
 
-}
 
 #jugar {
-  border-width: 2px;
-  font-size: 50px;
-  margin: 2px;
-  margin-top: 5px;
-  margin-bottom: 5px;
+  border-width: 2px;  font-size: 50px;  margin: 2px;  margin-top: 5px;  margin-bottom: 5px;
 }
 
-#teclado {
-  gap: 5px;
-}
+#teclado { gap: 5px;}
 
 #teclado button {
-  border: 4px outset #ffffff;
-  font-size: 32px;
-  height: 50px;
-  width: 50px;
-  margin: 3px;
-  margin-bottom: 20px;
-  text-indent: -1px;
-  border-radius: 10px;
-  
-  
+  border: 4px outset #ffffff; font-size: 32px; height: 50px; width: 50px;
+  margin: 3px; margin-bottom: 20px; text-indent: -1px; border-radius: 10px;
 }
 
 #contador {
-  font-size: 84px;
-  font-weight: bold;
-  margin-top: 44%;
-  margin-left: 66%;
+  font-size: 84px;  font-weight: bold; margin-top: 44%; margin-left: 66%;
 }
 
 footer {
-  margin-top: 20%;
-  top: 100%;
-  width: 100%;
-  height: 20%;
-  font-size: 30px;
+  margin-top: 20%; top: 100%; width: 100%;  height: 20%;  font-size: 30px;
+}
+}
+
+/******************************------------------******************************/
+
+@media only screen and (min-width: 1024px)  /*Probado en ipad orientation: landscape*/
+{
+body {margin: auto;
+  }
+
+header {height: 20%;
+}
+
+section {
+  margin-top: 10px; margin-bottom: 10px; padding: auto; border: 2px solid rgb(211, 208, 208);
+  border-radius: 10px; background-color: rgba(255, 255, 255, 0.1);   transition-duration: 2s;
+}
+
+.container {
+  transition-duration: 2s;
+}
+
+#imagenAhorcado {
+  margin-top: 25px; margin-left: 30px; margin-right: 30px; margin-bottom: 20px;
+}
+
+#imagenPerdedor {
+  margin-top: 25px; margin-left: 30px; margin-right: 30px; margin-bottom: 50px;
+}
+
+#imagenGanador {
+  margin-top: 25px; margin-left: 30px; margin-right: 30px;  margin-bottom: 50px;
+}
+
+#palabra_adivinar { top: 15%;}
+
+
+#botonJugar { width: 80%; margin-top: 5px; margin-bottom: 30px;}
+
+
+#jugar {
+  border-width: 2px;  font-size: 50px;  margin: 2px;  margin-top: 2px;  margin-bottom: 2px;
+}
+
+#teclado { gap: 5px; top: 80%; margin-left: 1%;
+  margin-right: 1%;}
+
+#teclado button {
+  border: 4px outset #ffffff; font-size: 30px; height: 40px; width: 40px;
+  margin: 3px; margin-bottom: 10px; text-indent: -1px; border-radius: 10px;
+}
+
+#contador {
+  font-size: 180px;  font-weight: bold; margin-top: 7%; margin-left: 62%;
+}
+
+footer {
+  margin-top: 0%; top: 100%; width: 100%;  height: 20%;  font-size: 30px;
+}
+
 }
 
 
-}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
