--- a/css/ahorcado.css
+++ b/css/ahorcado.css
@@ -26,14 +26,14 @@
 }
 
 body {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
   background-image: url(../img/Background.jpg);
   background-repeat: no-repeat;
   background-size: auto;
   margin: 0;
-  /*width: 100%;*/
-  min-height: 100vh;
-  height: 100%;
- /* overflow-y:hidden;*/
+  /*min-height: 100vh;*/
   align-items: center;
  -webkit-text-size-adjust: 100%;          /* optional */
   -webkit-font-smoothing: antialiased;   /* opcionales */
@@ -49,6 +49,11 @@ header {
   font-weight: bold;
   text-shadow: 0px 0px 10px #000;
 }
+
+section {
+  display: flex;
+  justify-content: center;
+  align-items: center;}
 
 main {
   width: 80%;
@@ -76,7 +81,6 @@ main {
 
 #imagenAhorcado {
   background-image: url(../img/Original_2.png);
-  width: 90%;
   align-items: center;
   height: 500px;
   width: 300px;
@@ -148,7 +152,6 @@ main {
 #botonJugar {
   display: inline-block;
   width: 80%;
-/*  height: 5%; */
   margin-top: 5px;
   text-align: center;
   align-items: center;
@@ -160,12 +163,10 @@ main {
   border-width: 1px;
   font-size: 40px;
   color: rgba(255, 255, 255, 0.7);
-/*  height: 80%; */ 
-  width: 100%;
+  width: 80%;
   margin: 2px;
   margin-top: 5px;
   margin-bottom: 5px;
-/*  padding: 10px; */
   text-align: center;
   text-indent: -1px;
   border-radius: 8px;
@@ -282,7 +283,9 @@ footer {
 /******************************------------------******************************/
 
 @media only screen and (min-width: 1024px)  /*Probado en ipad orientation: landscape*/
+
 {
+
 body {margin: auto;
   }
 
@@ -357,28 +360,7 @@ footer {
 
 
 
+ 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-@media only screen and (min-width: 1024px) { /*Probado en ipad orientation: landscape*/}
-@media only screen and (min-width: 1280px) { /*Probado en ipad orientation: landscape*/}
-@media only screen and (min-width: 1366px) { /*Probado en ipad orientation: landscape*/}
 @media only screen and (min-width: 1440px) { /*Probado en ipad orientation: landscape*/}
 @media only screen and (min-width: 1920px) { /*Probado en http://responsivetesttool.com/*/}
